# python_web_scraper_cleaner

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  trafilatura_scraper.py  verify_qa.py
api/: main.py
artifacts/: Current-Status.md  html_cleaner_docs.md  test_suite_perf.md
artifacts/archived/: Completed-Status.md  Gcloud_Deploy.md  pydantic_validation_fix.md
artifacts/mcp-server/: news-articles-mcp-prd.md
mcp_server/: USAGE_GUIDE.md  _modified_server_config.json  ask  ask_question.py  news_server.py  pyproject.toml  reproduce_issue.py  server_config.json  start_web  test_logic.py  test_mcp_direct.py  test_tool_direct.py  verify_qa.py  web_ui.py
mcp_server/templates/: index.html
scraper_cleaner/: __init__.py  html_cleaner_core.py
scraper_cleaner/cli/: __init__.py  html_cleaner.py  trafilatura_scraper.py
scripts/: html_cleaner.py  news.bak..py  news.py  trafilatura_scraper.py
tests/: test_api_integration.py  test_cli_select.py  test_error_handling.py  test_html_cleaner.py  test_scraper_functions.py
