[project]
name = "scraper-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "python-multipart>=0.0.9",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "responses>=0.25.2",
    "pytest-cov>=5.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.3",
]
