[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper-cleaner"
version = "0.1.0"
description = "Clean HTML files into readable markdown/text using Trafilatura"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "python-multipart>=0.0.9",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "responses>=0.25.2",
    "pytest-cov>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    # "news-please>=1.6.16",
    "newspaper4k[gnews]>=0.9.3.1",
]

[project.scripts]
html-cleaner = "scraper_cleaner.cli.html_cleaner:app"
trafilatura-scraper = "scraper_cleaner.cli.trafilatura_scraper:main"
trif = "scraper_cleaner.cli.trafilatura_scraper:main"

[dependency-groups]
dev = ["hatchling>=1.28.0"]
